[tool.poetry]
name = "reddit-wikidownloader"
version = "3.2.0"
description = "Download specific or all joined subreddit wiki documents"
authors = ["Micheal Espinola <michealespinola@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "reddit"}]

[tool.poetry.dependencies]
argparse = "^1.4.0"
configparser = "^7.1.0"
datetime = "^5.5"
html2text = "^2020.1.26"
praw = "^7.7.1"
prawcore = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
